--- a/DisclosureWidgets/DisclosureWidgets.entitlements
+++ b/DisclosureWidgets/DisclosureWidgets.entitlements
@@ -8,5 +8,9 @@
 	<array>
 		<string>group.Tyson-Freeze.Disclosure</string>
 	</array>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
